--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>
@@ -18,7 +18,7 @@
 <header class="header">
 	<div class="header__container">
 		<nav class="header__navbar navbar">
-			<a href="" class="navbar__logo">
+			<a href="" class="navbar__logo logo">
 				<i class="bx bxs-institution logo__icon"></i>
 				<span class="logo__text">EduPath</span>
 			</a>
